# rust-door-access-control-api

./: .env.example  .gitignore  Cargo.toml
migrations/2024-03-12-042625_users/: up.sql
migrations/2024-03-12-042653_users_logs/: up.sql
migrations/2024-03-23-142200_days_of_week/: up.sql
migrations/2024-03-23-142224_users_accesses/: up.sql
migrations/2024-04-12-031904_users_is_admin_and_active_fields/: down.sql  up.sql
src/: auth.rs  controller.rs  controllers.rs  main.rs  models.rs  mqtt_actions.rs  mysql_actions.rs  routes.rs  services.rs  utils.rs
src/controller/: unlock_door.rs
src/controllers/: auth.rs  door.rs  service_alive.rs  user_accesses.rs  users.rs
src/middlewares/: auth.rs
src/models/: days_of_week.rs  schema.rs  user.rs  users_accesses.rs
src/routes/: service_alive.rs  unlock_door.rs
src/services/: mqtt.rs  sql.rs
src/services/mqtt/: mqtt_actions.rs  mqtt_connector.rs  mqtt_constants.rs
src/services/sql/: sql_connector.rs
src/utils/: error_handlers.rs  errors.rs  response_builder.rs
src/utils/errors/: controller_errors.rs  models_errors.rs
