[package]
name = "access-control-api"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.22.0", features = ["full"] }
serde = { version = "1.0.149", features = ["derive"] }
validator = { version = "0.13.0", features = ["derive"] }
rumqttc = "0.23.0"
log = "0.4.20"
env_logger = "0.10.0"
dotenvy = "0.15.7"
chrono = "0.4.35"
chrono-tz = "0.6.2"
diesel = { version = "2.1.4", features = ["mysql", "chrono", "r2d2"] }
deadpool-diesel = { version = "0.5.0", features = ["mysql"] }

[profile.dev]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1
opt-level = 3