[package]
name = "access-control-api"
version = "0.2.0"
edition = "2021"

[dependencies]
# axum = {version = "0.7.5", features = ["headers"]}
axum = { version = "0.7.5" }
axum-macros = "0.4.1"
tokio = { version = "1.22.0", features = ["full"] }
serde = { version = "1.0.149", features = ["derive"] }
validator = { version = "0.13.0", features = ["derive"] }
rumqttc = "0.23.0"
log = "0.4.20"
env_logger = "0.10.0"
dotenvy = "0.15.7"
chrono = { version = "0.4.35", features = ["serde"] }
chrono-tz = "0.6.2"
diesel = { version = "2.1.4", features = ["mysql", "chrono", "r2d2"] }
deadpool-diesel = { version = "0.5.0", features = ["mysql"] }
serde_json = "1.0.115"

[profile.dev]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
